deploy/kubernetes/web/lrag-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lightningrag-web
  annotations:
    app.kubernetes.io/name: lightningrag-ui
    github: "https://github.com/LightningRAG/LightningRAG.git"
    app.kubernetes.io/version: 0.0.1
  labels:
    app: lightningrag-web
    version: lightningrag-vue3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lightningrag-web
      version: lightningrag-vue3
  template:
    metadata:
      labels:
        app: lightningrag-web
        version: lightningrag-vue3
    spec:
      containers:
        - name: lightningrag-nginx-container
          image: registry.cn-hangzhou.aliyuncs.com/lightningrag/web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              cpu: 500m
              memory: 1000Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/
              name: nginx-config
      volumes:
        - name: nginx-config
          configMap:
            name: my.conf
