deploy/kubernetes/web/lrag-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lightningrag-web
  annotations:
    app.kubernetes.io/name: lightningrag-ui
    github: "https://github.com/LightningRAG/LightningRAG.git"
    app.kubernetes.io/version: 0.0.1
  labels:
    app: lightningrag-web
    version: lightningrag-vue3
spec:
#  type: NodePort
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: lightningrag-web
    version: lightningrag-vue3
