deploy/kubernetes/web/lrag-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lightningrag-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
  - host: demo.LightningRAG.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lightningrag-web
            port:
              number: 8080
